--- a/package.json
+++ b/package.json
@@ -1,32 +1,128 @@
 {
-    "name": "vscode-copy-syntax",
-    "displayName": "copy-syntax",
-    "description": "copy highlighted code to clipboard",
-    "version": "0.0.1",
-    "publisher": "TZ",
-    "engines": {
-        "vscode": "^1.5.0"
-    },
-    "categories": [
-        "Other"
+  "name": "vscode-copy-syntax",
+  "displayName": "copy-syntax",
+  "description": "copy your code with syntax highlight to clipboard, so can used at keynote",
+  "version": "0.1.0",
+  "publisher": "TZ",
+  "engines": {
+    "vscode": "^1.5.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:copySyntax.copy",
+    "onCommand:copySyntax.copyWithOptions"
+  ],
+  "main": "./out/src/extension",
+  "contributes": {
+    "commands": [
+      {
+        "command": "copySyntax.copy",
+        "title": "Copy syntax"
+      },
+      {
+        "command": "copySyntax.copyWithOptions",
+        "title": "Copy syntax as ..."
+      }
     ],
-    "activationEvents": [
-        "onCommand:extension.sayHello"
-    ],
-    "main": "./out/src/extension",
-    "contributes": {
-        "commands": [{
-            "command": "extension.sayHello",
-            "title": "Hello World"
-        }]
+
+    "menus": {
+      "editor/context": [
+        {
+          "command": "copySyntax.copy",
+          "group": "9_cutcopypaste"
+        },
+        {
+          "command": "copySyntax.copyWithOptions",
+          "group": "9_cutcopypaste"
+        }
+      ]
     },
-    "scripts": {
-        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
-    },
-    "devDependencies": {
-        "typescript": "^1.8.5",
-        "vscode": "^0.11.0"
+
+    "configuration": {
+      "type": "object",
+      "title": "copy-syntax extension configuration",
+      "properties": {
+        "copy-syntax.defaults": {
+          "type": "object",
+          "default": {
+            "lang": "js",
+            "format": "rtf",
+            "python": "python",
+            "options": {}
+          }
+        },
+
+        "copy-syntax.showMessage": {
+          "type": "boolean",
+          "default": true 
+        },
+
+        "copy-syntax.formatters.rtf": {
+          "description": "see http://pygments.org/docs/formatters/#RtfFormatter",
+          "type": "object",
+          "default": {
+            "style": "default",
+            "fontsize": 50,
+            "fontface": "Monaco"
+          }
+        },
+
+        // "copy-syntax.formatters.html": {
+        //   "description": "see http://pygments.org/docs/formatters/#HtmlFormatter",
+        //   "type": "object",
+        //   "default": {
+        //     "style": "default"
+        //   }
+        // },
+
+        // "copy-syntax.formatters.img": {
+        //   "description": "see http://pygments.org/docs/formatters/#ImageFormatter",
+        //   "type": "object",
+        //   "default": {
+        //     "style": "default"
+        //   }
+        // },
+
+        "copy-syntax.mapping.markdown": {
+          "description": "markdown code to pygments lang option",
+          "type": "object",
+          "default": {
+            "sh": "bash",
+            "shell": "bash"
+          }
+        },
+
+        "copy-syntax.mapping.language": {
+          "description": "vscode languageId to pygments lang option, see http://pygments.org/docs/lexers/",
+          "type": "object",
+          "default": {
+            "typescript": "js"
+          }
+        },
+
+        "copy-syntax.mapping.fileExtension": {
+          "description": "file extension to pygments lang option",
+          "type": "object",
+          "default": {
+            "ts": "js"
+          }
+        }
+      }
     }
+  },
+  "scripts": {
+    "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+    "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install"
+  },
+  "devDependencies": {
+    "typescript": "^1.8.5",
+    "vscode": "^0.11.0"
+  },
+  "dependencies": {
+    "copy-paste": "^1.3.0",
+    "pygmentize-bundled": "^2.3.0"
+  }
 }
