--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "copy-syntax",
   "description": "copy your code with syntax highlight to clipboard, so can used at keynote",
   "version": "0.1.1",
-  "publisher": "TZ",
+  "publisher": "atian25",
   "engines": {
     "vscode": "^1.5.0"
   },
